# Cerberus

./: CMakeLists.txt  Cerberus.cpp  Cerberus.h  LICENSE  README.md  Residuals.h  main.cpp  old.cpp
Residuals/: Alignment2D3DResidual.h  Alignment2DFocalLengthResidual.h  Alignment2DResidual.h  Alignment3DFixedResidual.h  Alignment3DResidual.h  AlignmentBoxResidual.h  AlignmentTriangulateResidual.h  BundleAdjustmentResidual.h  PoseGraphResidual.h  Residuals.h  relative_pose.h
